SUBDIRS = src

EXTRA_DIST = spec/libipmsg-vl.spec spec/libipmsg-fc.spec sol10_blastwave_configure.sh \
				debian/changelog debian/compat debian/control debian/copyright \
				debian/cron.d.ex debian/docs debian/emacsen-install.ex debian/emacsen-remove.ex \
				debian/emacsen-startup.ex debian/files debian/init.d.ex debian/libipmsg-default.ex \
				debian/libipmsg-dev.dirs debian/libipmsg-dev.install debian/libipmsg.doc-base.EX \
				debian/libipmsg1.dirs debian/libipmsg1.install debian/manpage.1.ex \
				debian/manpage.sgml.ex debian/manpage.xml.ex debian/menu.ex debian/postinst.ex \
				debian/postrm.ex debian/preinst.ex debian/prerm.ex debian/rules \
				debian/shlibs.local.ex debian/watch.ex
