SUBDIRS = src

EXTRA_DIST = spec/libipmsg-vl.spec spec/libipmsg-fc.spec sol10_blastwave_configure.sh \
				debian/changelog debian/compat debian/control debian/copyright \
				debian/docs debian/libipmsg-dev.dirs debian/libipmsg-dev.files \
				debian/libipmsg1.dirs debian/libipmsg1.files debian/rules
